z-index fixed

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ height:5%;
 text-align:center;
 padding-top:20px;
 opacity: 0.8;
-z-index: 1000;
+z-index: 95;
 }
 
 nav li{
@@ -77,7 +77,7 @@ color:#e85200;
   top: 0;
   left: 0;
   color: #FFF;
-  z-index: 10;
+  z-index: 99;
   position: relative;
   text-align: center;
 }
@@ -86,7 +86,7 @@ color:#e85200;
   top: 0;
   right: 0;
   left: 0;
-  z-index: 1;
+  z-index: 99;
   position: absolute;
 }
 
@@ -94,13 +94,14 @@ color:#e85200;
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 99;
 }
 
 .videobox {
   position: relative;
   width: 100%;
   display: block;
-  z-index: 2000;
+  z-index: 99;
 }
 
 .googledata{
@@ -135,6 +136,7 @@ color:#e85200;
   color: #fff;
   font-size: 150px;
   padding-top: 300px;
+  z-index: 20;
 }
 
 .header2 {
